fix: adjust margin-left for services title for better alignment

--- a/style.css
+++ b/style.css
@@ -1181,7 +1181,7 @@ footer {
   }
   .servicesTitle h1 {
     font-weight: 900;
-    margin-left: -7px !important;
+    margin-left: -9px !important;
     text-align: center;
   }
   .servicesSub {
